--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.1.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
+    "use-sound": "^5.0.0",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
