--- a/socket/package.json
+++ b/socket/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "socket": "nodemon socket.js"
+    "dev": "nodemon socket.js",
+    "start": "node socket.js"
   },
   "keywords": [],
   "author": "",
